--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,7 +9,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  install-and-test:
+  install-format-lint:
 
     runs-on: ubuntu-latest
 
@@ -19,12 +19,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Format Code with Prettier
+      run: npm run format
+    - name: Auto Commit formated code
+      uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: Apply formatting changes
+        branch: ${{ github.head_ref }}
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+    - name: Run ESLint
+      run: npm run lint
     #- run: npm test
-    
-  
