set generall working dir for Jobs

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,6 +12,9 @@ jobs:
   install-format-lint:
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./Breta
 
     strategy:
       matrix:
