--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,4 +38,4 @@ jobs:
     - name: Run ESLint
       run: npm run lint
     #- run: npm test
-    # Comment to trigger a PR -> pipeline
+    # Comment to trigger a PR -> pipelin
