theme, styles and login

--- a/Breta/app.json
+++ b/Breta/app.json
@@ -25,6 +25,9 @@
     },
     "web": {
       "favicon": "./assets/expo/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
