--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,8 +8,7 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions:
-  contents: write
+permissions: write-all
 
 jobs:
   install-format-lint:
