--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,7 +8,8 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions: write-all
+permissions: 
+  contents: write
 
 jobs:
   install-format-lint:
