--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        node-version-file: './Breta/package-lock.json'
     - run: npm ci
     - name: Run ESLint
       run: npm run lint
