--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,17 +19,12 @@ jobs:
       run:
         working-directory: ./Breta
 
-    strategy:
-      matrix:
-        node-version: [20.x, 21.x]
-
     steps:
     - uses: actions/checkout@v3
     - run: ls -al && pwd
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
         cache: 'npm'
         node-version-file: './Breta/package-lock.json'
     - run: npm ci
