--- a/Breta/package.json
+++ b/Breta/package.json
@@ -1,4 +1,8 @@
+
 {
+  "engines": {
+    "node": "20.x || 21.x"
+  },
   "name": "breta",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
