--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,34 +4,33 @@ name: Pull Request into main
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
-permissions: 
+permissions:
   contents: write
 
 jobs:
   install-format-lint:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js
-      uses: actions/setup-node@v4
-      with:
-        cache: 'npm'
-        node-version-file: 'package.json'
-    - run: npm ci
-    - name: Run ESLint
-      run: npm run lint
-    - name: Format Code with Prettier
-      run: npm run format
-    - name: Auto Commit formated code
-      uses: stefanzweifel/git-auto-commit-action@v4
-      with:
-        commit_message: Apply formatting changes
-        branch: ${{ github.head_ref }}
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          cache: "npm"
+          node-version-file: "package.json"
+      - run: npm ci
+      - name: Run ESLint
+        run: npm run lint
+      - name: Format Code with Prettier
+        run: npm run format
+      - name: Auto Commit formated code
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Apply formatting changes
+          branch: ${{ github.head_ref }}
     #- run: npm test
     # Comment to trigger a PR -> Pipelinerun
