--- a/Vorlesung/swaggerDocs/PostsAPI.yaml
+++ b/Vorlesung/swaggerDocs/PostsAPI.yaml
@@ -24,7 +24,7 @@ paths:
             items:
               type: string
       responses:
-        '200':
+        "200":
           description: >-
             Eine Liste von 20-30 JSON Objekte mit Daten von den kategorisierten
             Posts werden angezeigt.
@@ -50,15 +50,15 @@ paths:
                       example: Aleks069
                     timestamp:
                       type: string
-                      example: '2023-11-30 12:10:00'
-        '204':
+                      example: "2023-11-30 12:10:00"
+        "204":
           description: Es gibt keine Beiträge mit den gesuchten Hashtags.
           content:
             application/json:
               schema:
                 type: string
                 example: Es wurde kein User mit den Hashtags <hashtags> gefunden
-        '500':
+        "500":
           description: Interner Server Fehler auf Seite des Backends.
           content:
             application/json:
@@ -94,7 +94,7 @@ paths:
                     - Sport
                     - Schwach
       responses:
-        '200':
+        "200":
           description: >-
             Der Erstellung des Posts war erfolgreich. Der neue Post wird dem
             Nutzer angezeigt.
@@ -119,7 +119,7 @@ paths:
                       example:
                         - Sport
                         - Schwach
-        '500':
+        "500":
           description: Interner Server Fehler auf Seite des Backends.
           content:
             application/json:
@@ -142,7 +142,7 @@ paths:
           schema:
             type: integer
       responses:
-        '200':
+        "200":
           description: >-
             Der Löschung des Beitrags war erfolgreich. Der Nutzer bekommt eine
             aktualisierte Version seiner Profilseite mit seinen eigenen
@@ -170,7 +170,7 @@ paths:
                         example:
                           - Sport
                           - Wichtig
-        '500':
+        "500":
           description: Interner Server Fehler auf Seite des Backends.
           content:
             application/json:
