--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lint": "eslint --ignore-path .eslintignore --ext .ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "prettier": "^3.1.1",
