--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
     "lint": "eslint --ignore-path .eslintignore --ext .ts,.tsx"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-router": "^2.0.14",
     "expo-status-bar": "~1.6.0",
+    "native-base": "^3.4.28",
+    "normalize-css-color": "^1.0.2",
     "prettier": "^3.1.1",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-confirmation-code-field": "^7.3.2",
+    "react-native-web": "~0.19.6",
+    "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
