--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-router": "^2.0.14",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
+    "nativewind": "^2.0.11",
     "normalize-css-color": "^1.0.2",
     "prettier": "^3.1.1",
     "react": "18.2.0",
@@ -40,6 +41,7 @@
     "eslint-plugin-n": "^16.4.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.3.3"
   },
   "private": true
