--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-router": "^2.0.14",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
+    "nativewind": "^2.0.11",
     "normalize-css-color": "^1.0.2",
     "prettier": "^3.1.1",
     "react": "18.2.0",
@@ -34,12 +35,15 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-standard-with-typescript": "^42.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.4.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.3.3"
   },
   "private": true
