--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native": "0.72.6",
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-web": "~0.19.6",
-    "react-router-dom": "^6.21.0"
+    "react-router-dom": "^6.21.0",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
