--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-confirmation-code-field": "^7.3.2",
+    "react-native-pager-view": "6.2.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.21.0",
     "use-debounce": "^10.0.0"
