fixing some dependencies conderning expo-doctor

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint --ignore-path .eslintignore --ext .ts,.tsx"
   },
   "dependencies": {
+    "@expo/json-file": "^8.3.0",
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
