--- a/app.json
+++ b/app.json
@@ -38,6 +38,14 @@
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "be8d5167-a6f2-4be4-bb59-0b863f14f4e6"
+      }
+    }
   }
 }
