--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/stack": "^6.3.20",
+    "@types/react-native": "^0.73.0",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-router": "^2.0.14",
