--- a/app.json
+++ b/app.json
@@ -34,7 +34,14 @@
     "web": {
       "favicon": "./assets/expo/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      ["expo-build-properties", {
+        "android": {
+          "usesCleartextTraffic": true
+        }
+      }],
+      "expo-router"
+    ],
     "extra": {
       "router": {
         "origin": false
