--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-build-properties": "^0.11.0",
     "expo-router": "^2.0.14",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
