--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@expo/json-file": "^8.3.0",
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.9",
-    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/stack": "^6.3.20",
     "@types/react-native": "^0.73.0",
     "axios": "^1.6.2",
@@ -36,9 +36,11 @@
     "react-native": "0.72.6",
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-gesture-handler": "^2.14.1",
+    "react-native-pager-view": "^6.2.3",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.21.0",
     "tailwindcss": "^3.3.2",
