--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-native-reanimated": "^3.6.2",
         "react-native-safe-area-context": "^4.8.2",
         "react-native-screens": "^3.29.0",
+        "react-native-tab-view": "^3.5.2",
         "react-native-web": "~0.19.6",
         "react-router-dom": "^6.21.0",
         "tailwindcss": "^3.3.2",
