--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@react-navigation/stack": "^6.3.20",
     "@types/react-native": "^0.73.0",
     "axios": "^1.6.2",
+    "core-js": "^3.36.0",
     "expo": "~49.0.15",
     "expo-build-properties": "^0.11.0",
     "expo-router": "^2.0.14",
     "expo-status-bar": "~1.6.0",
+    "jwt-decode": "^4.0.0",
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "normalize-css-color": "^1.0.2",
