--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.21.0",
     "tailwindcss": "^3.3.2",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
