--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "^0.19.11",
     "react-router-dom": "^6.21.0",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "react-native-pager-view": "6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
