--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "react-native": "0.74.1",
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "^0.19.11",
     "react-router-dom": "^6.21.0",
-    "use-debounce": "^10.0.0",
-    "react-native-pager-view": "6.3.0"
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
