--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.20",
     "core-js": "^3.36.0",
-    "expo": "~51.0.2",
-    "expo-build-properties": "~0.12.1",
-    "expo-location": "~17.0.1",
-    "expo-router": "^3.5.11",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^51.0.4",
+    "expo-build-properties": "^0.12.1",
+    "expo-location": "^17.0.1",
+    "expo-router": "^3.5.12",
+    "expo-status-bar": "^1.12.1",
     "jwt-decode": "^4.0.0",
     "nativewind": "^2.0.11",
     "normalize-css-color": "^1.0.2",
@@ -39,7 +39,7 @@
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "^3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
@@ -49,7 +49,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "^18.2.45",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
@@ -59,7 +59,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "tailwindcss": "^3.3.2",
-    "typescript": "~5.3.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
