--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "^0.19.11",
     "react-router-dom": "^6.21.0",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "expo-notifications": "~0.28.3",
+    "expo-device": "~6.0.2",
+    "expo-constants": "~16.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
