--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,23 +11,11 @@ on:
 permissions:
   contents: write
 
-jobs:
-  lint-format:
+jobs:      
+  lint-format-build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Run ESLint
-        run: npm run lint
-      - name: Format Code with Prettier
-        run: npm run format
-      - name: Auto Commit formated code
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Apply formatting changes
-          branch: ${{ github.head_ref }}
-  build:
-    runs-on: ubuntu-latest
-    steps:
+      #setup
       - name: Setup repo
         uses: actions/checkout@v4
       
@@ -56,9 +44,21 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      # lint
+      - name: Run ESLint
+        run: npm run lint
+      # format
+      - name: Format Code with Prettier
+        run: npm run format
+      - name: Auto Commit formated code
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Apply formatting changes
+          branch: ${{ github.head_ref }}
+      # build
       - name: Build Android app
         run: eas build --platform android --profile apk --local --output ${{ github.workspace }}/app-release.apk
-
+      # artifact publish
       - name: Upload APK artifact
         uses: actions/upload-artifact@v2
         with:
