--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,25 +11,25 @@ on:
 permissions:
   contents: write
 
-jobs:      
+jobs:
   lint-format-build:
     runs-on: ubuntu-latest
     steps:
       #setup
       - name: Setup repo
         uses: actions/checkout@v4
-      
+
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          cache: 'npm'
+          cache: "npm"
           node-version-file: "package.json"
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          java-version: "17"
+          distribution: "temurin"
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
