--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -5,21 +5,50 @@ on:
     branches:
       - main
 jobs:
-  build:
-    name: Install and build
+  build-and-publish:
+    name: Install, build and publish
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      # setup
+      - name: Setup repo
+        uses: actions/checkout@v4
+
+      - name: Setup node
+        uses: actions/setup-node@v4
         with:
           cache: npm
           node-version-file: "package.json"
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          distribution: "temurin"
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
       - name: Setup Expo and EAS
         uses: expo/expo-github-action@v8
         with:
+          expo-version: latest
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
+
       - name: Install dependencies
         run: npm ci
-      - name: Build on EAS
-        run: eas build -p android --profile apk --non-interactive --no-wait
+
+      # build  
+      - name: Build Android app
+        run: eas build --platform android --profile apk --local --output ${{ github.workspace }}/app-release.apk
+
+      # artifact publish
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-release
+          path: ${{ github.workspace }}/app-release.apk
+      - name: Release with Notes
+        uses: softprops/action-gh-release@v2
+        with:
+          files: ${{ github.workspace }}/app-release.apk
