--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -52,8 +52,9 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           calculatedSha=$(git rev-parse --short ${{ github.sha }})
-          git tag $calculatedSha
-          git push origin $calculatedSha
+          echo "COMMIT_SHORT_SHA=$calculatedSha" >> $GITHUB_ENV
+          git tag ${{ env.COMMIT_SHORT_SHA }}
+          git push origin ${{ env.COMMIT_SHORT_SHA }}
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v3
@@ -64,4 +65,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: ${{ github.workspace }}/app-release.apk
-          git_tag: ${{github.event.after}}
+          git_tag: ${{ env.COMMIT_SHORT_SHA }}
