--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,10 +3,9 @@
 name: Pull Request into main
 
 on:
-  push:
-    branches: ["main"]
   pull_request:
     branches: ["main"]
+    types: [opened, reopened, edited]
 
 permissions:
   contents: write
