--- a/app.json
+++ b/app.json
@@ -43,6 +43,12 @@
           }
         }
       ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ],
       "expo-router"
     ],
     "extra": {
