--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "use-debounce": "^10.0.0",
     "expo-notifications": "~0.28.3",
     "expo-device": "~6.0.2",
-    "expo-constants": "~16.0.1"
+    "expo-constants": "~16.0.1",
+    "expo-image-picker": "~15.0.5",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
